# cythonbiogeme

./: .#.gitignore  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml  wheels.yml
src/cythonbiogeme/: cythonbiogeme.cp310-win_amd64.pyd  cythonbiogeme.cp312-win_amd64.pyd  cythonbiogeme.cp37-win_amd64.pyd  cythonbiogeme.cp38-win_amd64.pyd  cythonbiogeme.cp39-win_amd64.pyd  version.py
src/cythonbiogeme/cpp/: READ.ME  bioConstants.h  bioDebug.h  bioDerivatives.cc  bioDerivatives.h  bioExprAnd.cc  bioExprBelongsTo.cc  bioExprBelongsTo.h  bioExprConditionalSum.cc  bioExprConditionalSum.h  bioExprCos.cc  bioExprCos.h  bioExprDerive.cc  bioExprDivide.cc  bioExprElem.cc  bioExprExp.cc  bioExprIntegrate.cc  bioExprLinearUtility.cc  bioExprLog.cc  bioExprLogLogit.cc  bioExprLogLogit.h  bioExprLogLogitFullChoiceSet.cc  bioExprLogLogitFullChoiceSet.h  bioExprLogzero.cc  bioExprMinus.cc  bioExprMontecarlo.cc  bioExprNormalCdf.cc  bioExprNumeric.cc  bioExprPanelTrajectory.cc  bioExprPlus.cc  bioExprPower.cc  bioExprPower.h  bioExprPowerConstant.cc  bioExprPowerConstant.h  bioExprSin.cc  bioExprSin.h  bioExprTimes.cc  bioFormula.cc  bioFormula.h  bioMemoryManagement.cc  (+16 more)
src/cythonbiogeme/cpp/old_versions/: cbiogeme.pyx
tests/: expressions.py  idmanager.py  simple_test.py  test_data.py
