[build-system]
requires = [
    "setuptools >= 67",
    "wheel",
    "numpy >= 1.26",
    "cython >= 3",
]
build-backend = "setuptools.build_meta"

[project]
name = "cythonbiogeme"
dynamic = ["version"]
description = "C++ part of the Biogeme package"
readme = "README.md"
authors = [
    { name = "Michel Bierlaire", email = "michel.bierlaire@epfl.ch" }
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "http://biogeme.epfl.ch"
Documentation = "http://biogeme.epfl.ch/documents.html"
Code = "https://github.com/michelbierlaire/cythonbiogeme"

[project.optional-dependencies]
testing = [
    "cython >= 3",
    "numpy >= 1.26",
    "pytest >= 8",
    "pytest-cov >= 5",
    "tox >= 4"
]

[tool.setuptools.dynamic]
version = { attr = "cythonbiogeme.version.__version__" }
