[build-system]
requires = [
    "setuptools>=63.4.1",
    "wheel",
    "numpy>=1.19.0",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "cythonbiogeme"
dynamic = ["version"]
description = "C++ part of the Biogeme package"
readme = "README.md"
authors = [
    { name = "Michel Bierlaire", email = "michel.bierlaire@epfl.ch" }
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "http://biogeme.epfl.ch"
Documentation = "http://biogeme.epfl.ch/documents.html"
Code = "https://github.com/michelbierlaire/cythonbiogeme"

[project.optional-dependencies]
testing = [
    "cython >= 0.29.32",
    "numpy >= 1.23.4",
    "pytest >= 7.2.0",
    "pytest-cov >= 4.0.0",
    "tox >= 3.27.1"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cythonbiogeme"]

[tool.setuptools.dynamic]
version = { attr = "cythonbiogeme.version.__version__" }
