[build-system]
requires = [
    "setuptools>=70.1.1",
    "wheel>=0.43.0",
    "numpy>=2.0.0",
    "Cython >= 3.0.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "cythonbiogeme"
dynamic = ["version"]
description = "C++ part of the Biogeme package"
readme = "README.md"
authors = [
    { name = "Michel Bierlaire", email = "michel.bierlaire@epfl.ch" }
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]

requires-python = ">=3.10"

[project.urls]
Homepage = "http://biogeme.epfl.ch"
Documentation = "http://biogeme.epfl.ch/documents.html"
Code = "https://github.com/michelbierlaire/cythonbiogeme"

[project.optional-dependencies]
testing = [
    "pytest >= 8.2.2",
    "pytest-cov >= 5.0.0",
    "tox >= 4.15.1"
]


[tool.setuptools.dynamic]
version = { attr = "cythonbiogeme.version.__version__" }
